--- a/index.html
+++ b/index.html
@@ -20,11 +20,48 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+      <figure class="lead-figure">
         <img class="lead__image" src="images/lead-polka.jpg" alt="схема путешествия на поезде">
-        <p class="lead__caption">ваша полка — верхняя</p>
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
     </section>
     <section class="intro">
-      <h2 class="intro__title"></h2>
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране.
+        Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
+        А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама,
+         которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места,
+          достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li>Часовых поясов <span class="weight-normal">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="weight-normal">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="weight-normal">16</span></li>
+          <li>Природных заповедников <span class="weight-normal">105</span></li>
+          <li>Аэропортов <span class="weight-normal">241</span></li>
+        </ul>
+    </section>
+    <section>
+      <ul class="photo-grid">
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="вид из окна поезда"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="вид на горы с птичьего полета"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="волк в тумане"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="лес в тумане"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="автомобиль на льду"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="пляж озера Байкал"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="вид на гору Эльбрус"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="волнорезы и знак пешеходного перехода"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="вид на камчатские горы"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="вид на озеро и камчатскую гору"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="берег озера Байкал"></li>
+      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="горы в тумане"></li>
+    </ul>
+    </section>
+
+    <section class="places">
+      <div class="place">
+
+      </div>
+
     </section>
   </div>
 </body>
