--- a/index.html
+++ b/index.html
@@ -11,57 +11,164 @@
 <body>
   <div class="page">
     <header class="header">
-      <a class="header__logo" href="#"></a>
+      <div class="header__logo" href="#"></div>
       <ul class="lang-link-wrap">
-        <a class="header__lang-link" href="#"><li>Ru</li></a>
-        <a class="header__lang-link" href="#"><li>En</li></a>
+        <a class="header__lang-link" href="#">
+          <li>Ru</li>
+        </a>
+        <a class="header__lang-link" href="#">
+          <li>En</li>
+        </a>
       </ul>
     </header>
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-      <figure class="lead-figure">
-        <img class="lead__image" src="images/lead-polka.jpg" alt="схема путешествия на поезде">
-        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-      </figure>
-    </section>
-    <section class="intro">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
-      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране.
-        Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
-        А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама,
-         которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места,
-          достойные вашего отпуска.</p>
-        <ul class="intro__list">
-          <li>Часовых поясов <span class="weight-normal">11</span></li>
-          <li>Объектов природного наследия ЮНЕСКО <span class="weight-normal">12</span></li>
-          <li>Объектов культурного наследия ЮНЕСКО <span class="weight-normal">16</span></li>
-          <li>Природных заповедников <span class="weight-normal">105</span></li>
-          <li>Аэропортов <span class="weight-normal">241</span></li>
-        </ul>
+      <div class="lead-intro-wrap">
+        <figure class="lead__figure">
+          <img class="lead__image" src="images/lead-polka.jpg" alt="схема путешествия на поезде">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
+
+        <section class="intro">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            провести отпуск в родной стране.
+            Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми
+            лесами Саян и суровыми льдами плато Путорана.
+            А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как,
+            например, Вера Башмакова — смелая молодая мама,
+            которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+            стране. Мы выбрали и описали некоторые интересные места,
+            достойные вашего отпуска.</p>
+          <ul class="intro__list">
+            <li>Часовых поясов <span class="weight-normal">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="weight-normal">12</span></li>
+            <li>Объектов культурного наследия ЮНЕСКО <span class="weight-normal">16</span></li>
+            <li>Природных заповедников <span class="weight-normal">105</span></li>
+            <li>Аэропортов <span class="weight-normal">241</span></li>
+          </ul>
+        </section>
+      </div>
     </section>
     <section>
       <ul class="photo-grid">
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="вид из окна поезда"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="вид на горы с птичьего полета"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="волк в тумане"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="лес в тумане"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="автомобиль на льду"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="пляж озера Байкал"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="вид на гору Эльбрус"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="волнорезы и знак пешеходного перехода"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="вид на камчатские горы"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="вид на озеро и камчатскую гору"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="берег озера Байкал"></li>
-      <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="горы в тумане"></li>
-    </ul>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-train.jpg"
+            alt="вид из окна поезда"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg"
+            alt="вид на горы с птичьего полета"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="волк в тумане">
+        </li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="лес в тумане">
+        </li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-arisa.jpg"
+            alt="автомобиль на льду"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-baikal.jpg"
+            alt="пляж озера Байкал"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-elbrus.jpg"
+            alt="вид на гору Эльбрус"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg"
+            alt="волнорезы и знак пешеходного перехода"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg"
+            alt="вид на камчатские горы"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg"
+            alt="вид на озеро и камчатскую гору"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg"
+            alt="берег озера Байкал"></li>
+        <li class="list-style-none"><img class="photo-grid__item" src="images/photo-grid-ergaki.jpg"
+            alt="горы в тумане"></li>
+      </ul>
     </section>
 
     <section class="places">
       <div class="place">
-
+        <h2 class="place__title">Куршская коса</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+        </div>
+        <img class="place__image" src="images/place-kosa.jpg" alt="берег куршской косы">
+        <div class="place__text">
+          <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+            воздухом.</p>
+          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на
+            равнинах
+            пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
       </div>
 
+      <div class="place">
+        <h2 class="place__title">Кольский</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+            Geographic</a>
+        </div>
+        <img class="place__image" src="images/place-kolsky.jpg" alt="горы в снегу">
+        <div class="place__text">
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
+            юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в
+            Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+            накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+            в Мурманск.</p>
+        </div>
+      </div>
+
+      <div class="place">
+        <h2 class="place__title">Алтай</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+        </div>
+        <img class="place__image" src="images/place-altai.jpg" alt="ноутбук на фоне леса">
+        <div class="place__text">
+          <p class="place__paragraph">Алтай — одно из красивейших мест в России.
+            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+            воздухом.</p>
+          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+            пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
+      </div>
+
+      <div class="place">
+        <h2 class="place__title">Зимний Байкал</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+        </div>
+        <img class="place__image" src="images/place-winter-baikal.jpg" alt="рисунок на льду озера">
+        <div class="place__text">
+          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+          </p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале
+            «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+        </div>
+      </div>
+
+      <div class="place">
+        <h2 class="place__title">Карелия</h2>
+        <div class="place__website">
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+        </div>
+        <img class="place__image" src="images/place-karelia.jpg" alt="вид на реку">
+        <div class="place__text">
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+          </p>
+        </div>
+      </div>
     </section>
   </div>
 </body>
