Add a block cover, footer

--- a/index.html
+++ b/index.html
@@ -163,13 +163,43 @@
         </div>
         <img class="place__image" src="images/place-karelia.jpg" alt="вид на реку">
         <div class="place__text">
-          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+          <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
           </p>
         </div>
       </div>
     </section>
+    <section class="cover">
+      <a class="cover__link" href="#">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
+      </a>
+    </section>
+    <footer class="footer">
+      <ul class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps">
+          <li>Карты</li>
+        </a>
+        <a class="footer__link" href="https://yandex.ru/pogoda">
+          <li>Погода</li>
+        </a>
+        <a class="footer__link" href="https://rasp.yandex.ru">
+          <li>Расписание</li>
+        </a>
+        <a class="footer__link" href="https://calendar.yandex.ru">
+          <li>Календарь</li>
+        </a>
+        <a class="footer__link" href="https://travel.yandex.ru">
+          <li>Путешествия</li>
+        </a>
+      </ul>
+      <div class="footer__copyright">© 2021. Евгений Манин</div>
+    </footer>
   </div>
 </body>
 
