--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header__logo" href="#"></div>
+      <div class="header__logo"></div>
       <ul class="lang-link-wrap">
-        <a class="header__lang-link" href="#">
-          <li>Ru</li>
-        </a>
-        <a class="header__lang-link" href="#">
-          <li>En</li>
-        </a>
+          <li class="list-style-none"><a class="header__lang-link" href="#">Ru</a></li>
+          <li class="list-style-none"><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </header>
     <section class="lead">
@@ -182,21 +178,11 @@
     </section>
     <footer class="footer">
       <ul class="footer__links">
-        <a class="footer__link" href="https://yandex.ru/maps">
-          <li>Карты</li>
-        </a>
-        <a class="footer__link" href="https://yandex.ru/pogoda">
-          <li>Погода</li>
-        </a>
-        <a class="footer__link" href="https://rasp.yandex.ru">
-          <li>Расписание</li>
-        </a>
-        <a class="footer__link" href="https://calendar.yandex.ru">
-          <li>Календарь</li>
-        </a>
-        <a class="footer__link" href="https://travel.yandex.ru">
-          <li>Путешествия</li>
-        </a>
+          <li class="list-style-none"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li class="list-style-none margin-description"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li class="list-style-none margin-description"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li class="list-style-none margin-description"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li class="list-style-none margin-description"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
       </ul>
       <div class="footer__copyright">© 2021. Евгений Манин</div>
     </footer>
