--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="pages/styles.css" rel="stylesheet">
+  <link href="pages/index.css" rel="stylesheet">
   <title>Путешествия по России</title>
 </head>
 
