--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
-        <li class="list-style-none"><a class="header__lang-link header__lang-link_underline" href="#">Ru</a></li>
-        <li class="list-style-none"><a class="header__lang-link" href="#">En</a></li>
+        <li><a class="header__lang-link header__lang-link_underline" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </header>
     <main class="main">
