--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
-          </a>
+        </article>
       </section>
       <section class="cover">
         <a class="cover__link" href="#">
