--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
       <nav>
         <ul class="footer__links">
           <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li class="margin-description"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li class="margin-description"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li class="margin-description"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li class="margin-description"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
         </ul>
       </nav>
       <div class="footer__copyright">© 2021. Евгений Манин</div>
