--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <section class="places">
         <article class="place">
-          <h2 class="place__title">Куршская<br>коса</h2>
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
