--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
-        <li><a class="header__lang-link header__lang-link_underline" href="#">Ru</a></li>
+        <li><a class="header__lang-link header__lang-link_underline header__lang-link_margin_right" href="#">Ru</a></li>
         <li><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </header>
@@ -175,14 +175,14 @@
     <footer class="footer">
       <nav>
         <ul class="footer__links">
-          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li><a class="footer__link footer__link_margin_first" href="https://yandex.ru/maps">Карты</a></li>
+          <li><a class="footer__link footer__link_margin_first" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li><a class="footer__link footer__link_margin_first" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li><a class="footer__link footer__link_margin_first" href="https://calendar.yandex.ru">Календарь</a></li>
           <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
         </ul>
       </nav>
-      <div class="footer__copyright">© 2021. Евгений Манин</div>
+      <p class="footer__copyright">© 2021. Евгений Манин</p>
     </footer>
   </div>
 </body>
