--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header__logo"></div>
       <ul class="header__lang-links">
         <li class="header__lang-link"><a class="header__text-link header__text-link_underline" href="#">Ru</a></li>
-        <li class="header__lang-link header__lang-link_margin_last"><a class="header__text-link" href="#">En</a></li>
+        <li class="header__lang-link header__lang-link_last"><a class="header__text-link" href="#">En</a></li>
       </ul>
     </header>
     <main class="main">
