--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
+        <!--т.к. псевдокласс :last-child и все его соплеменники работают с тегом, придумал только такой вариант-->
         <li class="header__lang-link"><a class="header__text-link header__text-link_underline" href="#">Ru</a></li>
         <li class="header__lang-link header__lang-link_last"><a class="header__text-link" href="#">En</a></li>
       </ul>
