--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <li class="footer__link"><a class="footer__text-link" href="https://yandex.ru/pogoda">Погода</a></li>
           <li class="footer__link"><a class="footer__text-link" href="https://rasp.yandex.ru">Расписание</a></li>
           <li class="footer__link"><a class="footer__text-link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li class="footer__link footer__link_margin_last"><a class="footer__text-link"
+          <li class="footer__link footer__link_last"><a class="footer__text-link"
               href="https://travel.yandex.ru">Путешествия</a></li>
         </ul>
       </nav>
