--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
-        <!--т.к. псевдокласс :last-child и все его соплеменники работают с тегом, придумал только такой вариант-->
-        <li class="header__lang-link"><a class="header__text-link header__text-link_underline" href="#">Ru</a></li>
-        <li class="header__lang-link header__lang-link_last"><a class="header__text-link" href="#">En</a></li>
+        <li class="header__lang-link"><a class="header__text-link" href="#">Ru</a></li>
+        <li class="header__lang-link"><a class="header__text-link" href="#">En</a></li>
       </ul>
     </header>
     <main class="main">
@@ -180,8 +179,7 @@
           <li class="footer__link"><a class="footer__text-link" href="https://yandex.ru/pogoda">Погода</a></li>
           <li class="footer__link"><a class="footer__text-link" href="https://rasp.yandex.ru">Расписание</a></li>
           <li class="footer__link"><a class="footer__text-link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li class="footer__link footer__link_last"><a class="footer__text-link"
-              href="https://travel.yandex.ru">Путешествия</a></li>
+          <li class="footer__link"><a class="footer__text-link" href="https://travel.yandex.ru">Путешествия</a></li>
         </ul>
       </nav>
       <p class="footer__copyright">© 2021. Евгений Манин</p>
