--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__lang-links">
-        <li class="header__lang-link"><a class="header__text-link" href="#">Ru</a></li>
+        <li class="header__lang-link"><a class="header__text-link header__text-link_activ" href="#">Ru</a></li>
         <li class="header__lang-link"><a class="header__text-link" href="#">En</a></li>
       </ul>
     </header>
